6 June 2007
+ Started embedded functionality code.
+ Updated files: conf/embedded.php, templates/edit_embed.tpl,
                 templates/embedded.tpl,
                 templates/embedded/youtube.tpl


1 June 2007
+ Added link to delete multimedia files
+ Added edit link for multimedia files
+ Thumbnails now clickable to open video in popup window.
+ Tidy in Image.php
+ Updated files: config/config.php, templates/image_view.tpl,
                 templates/multimedia_view.tpl,
+ Removed view.tpl


31 May 2007
+ Added option to use ffmpeg to create thumbnails
+ Restructured settings form.
+ Updated files: templates/settings.tpl

30 May 2007 
+ Added the ability to clip multimedia files to content.
+ Added multimedia max upload size to settings.
+ getTag function works in the Multimedia class for flash video files.
+ Updated files: templates/settings.tpl, templates/filters/flash.tpl,
                 entire filters/flash/ directory. 


29 May 2007
>> NON-DEVELOPERS!!! DO NOT UPDATE STABLE CODE WITH CHANGES! <<

+ Added Multimedia folders
+ Added Multimedia files.
+ Added ability to classify uploaded files.
+ Removed itemname variable from Document_Manager
+ Created setDirectory function for File_Common. Assures trailing
  forward slash on directory name.
+ Commented out ext variable in File_Common. Doesn't appear to be in
  use.
+ Fixed some error messages in File_Common.
+ Added multimedia options in File_Common.
+ Added writable directory check before allowing new folders to be
  created.
+ Clip option moved outside edit_folder permissions when viewing images.
+ Added option to link images.
+ Added option for resized images to link to their parent, full-size
  image.
+ Moved edit and delete links into their own function in Image

+ Database changes
  o Added parent_id and url column to image
  o Added new multimedia table.

+ Updated files:
  conf
  ----------------------------
  config.php, error.php

  templates
  ---------------------------