@@ -1,11 +1,0 @@
-<OBJECT classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' width="{WIDTH}"
-        height="{HEIGHT}" codebase='http://www.apple.com/qtactivex/qtplugin.cab'>
-        <param name='src' value="qtlogo.mov">
-        <param name='qtsrc' value="{SERVER_PATH}">
-        <param name='autoplay' value="false">
-        <param name='controller' value="true">
-        <param name='loop' value="false">
-        <EMBED src="qtlogo.mov" qtsrc="{SERVER_PATH}" width="{WIDTH}" height="{HEIGHT}" autoplay="false" 
-        controller="true" loop="false" pluginspage='http://www.apple.com/quicktime/download/'>
-        </EMBED>
-</OBJECT>
