@@ -1,5 +1,0 @@
-<object width="{WIDTH}" height="{HEIGHT}">
-<param name="movie" value="{URL}"></param>
-<param name="wmode" value="transparent"></param>
-<embed src="{URL}" type="application/x-shockwave-flash" wmode="transparent" width="{WIDTH}" height="{HEIGHT}"></embed>
-</object>
